--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
 
 <body>
+
+  <canvas id="Canvas"></canvas>
+  
   <div class="container" id="one">
     <h1 class="teksOne">HELLO...</br>MY DEAR!</h1>
     <h3 class="teksTwo blink-text">🥳🥳<br>it's your special day!<br>sebelum lanjut cium dulu<br>😜😜</h3>
