--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <button id="oneButton" class="oneTombol fade-in-button">Muuaacchhh</button>
   </div>
 
-  <div class="container-Two" id="canvas" style="display: none;">
+  <div class="container-Two" id="two" style="display: none;">
     <h1 class="teksThree">Barakallah Fii Umrik<br>And<br>Happy Milad<br>Calon Istriku Yaa!!!<br>🎂🎉🎈
     </h1>
     <p class="teksFour fade-in">hari ini adalah hari spesialmu, dilahirkan oleh sosok malaikat tak bersayap
@@ -30,7 +30,7 @@
     <button id="twoButton" class="twoTombol fade-in-newButton">Next</button>
   </div>
 
-   <canvas id="Canvas"></canvas>
+  <canvas id="Canvas"></canvas>
   <script src="script.js"></script>
 </body>
 
