--- a/index.html
+++ b/index.html
@@ -30,6 +30,41 @@
     <button id="twoButton" class="twoTombol fade-in-newButton">Next</button>
   </div>
 
+  <div class="container-Three" id="three" style="display: none;">
+    <div id="slideshow-container">
+      <div class="slide fade">
+        <img src="1.jpg">
+      </div>
+      <div class="slide fade">
+        <img src="2.jpg">
+      </div>
+      <div class="slide fade">
+        <img src="3.jpg">
+      </div>
+      <div class="slide fade">
+        <img src="4.jpg">
+      </div>
+      <div class="slide fade">
+        <img src="5.jpg">
+      </div>
+      <div class="slide fade">
+        <img src="6.jpg">
+      </div>
+      <div class="slide fade">
+        <img src="7.jpg">
+      </div>
+      <div class="slide fade">
+        <img src="8.jpg">
+      </div>
+      <div class="slide fade">
+        <img src="9.jpg">
+      </div>
+      <div class="slide fade">
+        <img src="10.jpg">
+      </div>
+    </div>
+  </div>
+
   <canvas id="Canvas"></canvas>
   <script src="script.js"></script>
 </body>
