--- a/index.html
+++ b/index.html
@@ -63,6 +63,19 @@
         <img src="10.jpg">
       </div>
     </div>
+    <h2 class="teksSix">I made all this...<br>As a birthday present to you<br>Hopefully next year we can
+      be together<br>
+      Enjoy all the beautiful moments</h2>
+    <h2 class="teksSeven">Keep the spirit and fight My Future Wife<br>I will always support you<br>And
+      will always be
+      there for you<br>When you need me</h2>
+    <h2 class="teksEight">Thank you for coming and being part of my life<br>I'm grateful to have
+      you<br>Sorry if this is
+      all that works<br>I give it for your special day</h2>
+    <h2 class="teksNine">Thanks again for everything<br>Lastly...<br>I'm like to wish you one more
+      time<br>Happy
+      Milad...🥳Lenggo Febriani🥳</h2>
+    <h1 class="teksTen">✨Wish You All The Best✨</h1>
   </div>
 
   <canvas id="Canvas"></canvas>
