--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   </style>
 </head>
 
+<audio id="backgroundMusic" autoplay loop>
+  <source src="perfect.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 
 <body>
 
@@ -75,7 +79,8 @@
     <h2 class="teksNine">Thanks again for everything<br>Lastly...<br>I'm like to wish you one more
       time<br>Happy
       Milad...🥳Lenggo Febriani🥳</h2>
-    <h1 class="teksTen">✨Wish You All The Best✨</h1>
+    <h2 class="teksTen">🥰 I LOVE YOU MUCCHHH MOOREEE 🥰<br>😘 MMMUUAACCCHHHHH 😘</h2>
+    <h1 class="teksEleven">✨Wish You All The Best✨</h1>
   </div>
 
   <canvas id="Canvas"></canvas>
