--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       yang bernama "IBU"</p>
     <p class="teksFive fade-in-two">Dihari ulang tahunmu ini, aku ingin mengucapkan semoga panjang umur,
       sehat selalu, dan semoga segala keinginanmu tercapai.</p>
-    <button id="twoButton" class="twoTombol fade-in-newButton">Next</button>
+    <button id="twoButton" class="fade-in-newButton">Next</button>
   </div>
 
   <div class="container-Three" id="three" style="display: none;">
@@ -73,9 +73,8 @@
     <h2 class="teksSeven">Keep the spirit and fight My Future Wife<br>I will always support you<br>And
       will always be
       there for you<br>When you need me</h2>
-    <h2 class="teksEight">Thank you for coming and being part of my life<br>I'm grateful to have
-      you<br>Sorry if this is
-      all that works<br>I give it for your special day</h2>
+    <h2 class="teksEight">Thank you for coming and being<br>part of my life<br>I'm grateful to have
+      you<br>Sorry if this is all that works<br>I give it for your special day</h2>
     <h2 class="teksNine">Thanks again for everything<br>Lastly...<br>I'm like to wish you one more
       time<br>Happy
       Milad...🥳Lenggo Febriani🥳</h2>
